# QSARcons

./: Benchmark_summury.ipynb  Experiment_1_genetic_algorithm_tutorial.ipynb  Experiment_2_consensus_search_comparison.ipynb  Notebook_1_QSARcons_pipeline.ipynb  README.md  README.rst  Step_1_Data_preparation.ipynb  Step_1_QSAR_model_building.ipynb  Step_2_Consensus_benchmark.ipynb  Step_2_QSAR_model_building.ipynb  Step_2_consensus_comparison.ipynb  Step_3_Benchmark_statistics.ipynb  Step_3_Consensus_benchmark.ipynb  consensus.py  experiment_1.ipynb  genopt.py  model_building.py  pyproject.toml  setup.py
benchmark/: CHEMBL1075104_2D.csv  CHEMBL1800_2D.csv  CHEMBL1801_2D.csv  CHEMBL1833_2D.csv  CHEMBL1855_2D.csv  CHEMBL1862_2D.csv  CHEMBL1867_2D.csv  CHEMBL1871_2D.csv  CHEMBL1889_2D.csv  CHEMBL1898_2D.csv  CHEMBL1907596_2D.csv  CHEMBL1908389_2D.csv  CHEMBL1916_2D.csv  CHEMBL1945_2D.csv  CHEMBL1946_2D.csv  CHEMBL1983_2D.csv  CHEMBL2001_2D.csv  CHEMBL2014_2D.csv  CHEMBL2034_2D.csv  CHEMBL2049_2D.csv  CHEMBL204_2D.csv  CHEMBL2056_2D.csv  CHEMBL205_2D.csv  CHEMBL208_2D.csv  CHEMBL2094120_2D.csv  CHEMBL2094121_2D.csv  CHEMBL2094122_2D.csv  CHEMBL209_2D.csv  CHEMBL211_2D.csv  CHEMBL2147_2D.csv  CHEMBL214_2D.csv  CHEMBL216_2D.csv  CHEMBL217_2D.csv  CHEMBL2185_2D.csv  CHEMBL218_2D.csv  CHEMBL219_2D.csv  CHEMBL222_2D.csv  CHEMBL223_2D.csv  CHEMBL224_2D.csv  CHEMBL225_2D.csv  (+87 more)
colab/: Notebook_1_QSARcons_pipeline.ipynb
dev/: Benchmark_summury.ipynb
genopt/: optimizer.py  population.py  scaler.py  selector.py  utils.py
notebooks/: Notebook_1_LogS_pipeline.ipynb  (+2 more)
(+768 files in other folders)
