[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qsarcons"
version = "1.1.3"
description = "Smart consensus QSAR"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { text = "MIT" }
authors = [
  { name = "Dmitry Zankov", email = "dvzankov@gmail.com" }
]

dependencies = [
        "psutil",
        "rdkit",
        "molfeat",
        "scikit-learn",
        "xgboost",
        "catboost",
        "datasets",
        "huggingface_hub",
        "pytest"
]

[tool.setuptools.packages.find]
where = ["."]
